// Copyright 2013 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.
//
// Distilled page content.

syntax = "proto2";

option optimize_for = LITE_RUNTIME;

package dom_distiller;

message DistilledPageProto {
  // The URLs used to create this page.
  required string url = 1;

  // A title for the distilled page.
  optional string title = 2;

  // The distilled HTML.
  required string html = 3;

  message Image {
    // Handle to the image. This could be the URL where the image was found.
    // The handle should be referenced verbatim in the HTML.
    required string name = 1;

    // The image data
    required bytes data = 2;
  }

  // The images referenced in the HTML.
  repeated Image image = 4;
}
